--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -1,10 +1,12 @@
 /* HEADER SIMPLE ET RESPONSIVE */
 .header {
+    position: sticky;
+    top: 0;
     background: #232946;
     color: #fff;
     width: 100%;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
-    position: relative;
+    /* position: relative; */
     z-index: 1000;
 }
 .header__container {
